feat: Add file path handling and validation for Excel files in Settings